--- a/frontend/static/styles.css
+++ b/frontend/static/styles.css
@@ -12,10 +12,26 @@ body {
     overflow-x: hidden;
 }
 
+
 .container {
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 20px;
+}
+
+.container-filter{
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px 20px;
+
+}
+
+.container-img {
+
+    display: flex;
+    justify-content: center;
+    margin-top: 60px; /* o lo que necesites */
+    
 }
 
 /* Header y navegación */
@@ -33,9 +49,11 @@ body {
 
 .header-container {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     position: relative;
+    height: 40px; 
+    overflow: visible; 
 }
 
 .logo-hamburger {
@@ -99,6 +117,10 @@ body {
     color: #d85c2f;
 }
 
+.hscroll {
+    overflow-x: auto; /* Horizontal */
+  }
+
 .logo {
     margin-left: 0;
     display: flex;
@@ -109,68 +131,121 @@ body {
     margin-left: 0;
 }
 
-.nav {
-    flex: 1;
+
+.login-link{
+    color: rgb(66, 66, 66);
+    background-color: rgba(0, 0, 0, 0.0); 
+    text-decoration: none;    
+    font-size: small;
+    padding: 2px 5px 2px 5px;
+    border-radius: 5px;
+    border: none;
+    transition: all 0.3s ease;
+    
 }
+
+.login-link:hover {    
+    background-color: rgba(255, 255, 255, 0.3)    
+}
+
+.login-indicador-container{
+
+    margin-left: auto;
+    margin-right: 10px;
+    
+
+}
+
+.login-indicador{
+
+    color:#333333;
+    font-size: small;
+    
+}
+
 
 .nav-menu {
-    padding: 20px;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 300px;
-    height: calc(100vh - 100px);
-    z-index: 999;
-    background: linear-gradient(135deg, #4a7c59, #6b8e6b);
-    box-shadow: 0 8px 32px rgba(0,0,0,0.15);
-    border-radius: 0 0 5px 0px;
-    transform: translateX(10px);
-    opacity: 0;
-    pointer-events: none;
-    visibility: hidden;
-    transition: transform 0.3s cubic-bezier(.4,2,.6,1), opacity 0.3s cubic-bezier(.4,2,.6,1), visibility 0.3s;
+    position: fixed;
+    top: 100%; /* justo debajo del header */
+    left: -100%;
+    width: 100%;
+    max-width: 300px;
+    background: #4a7c59; /* o el color que uses para el fondo del menú */
+    z-index: 1000;
+    /*display: none;*/
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: left 0.3s ease-in-out;
 }
+  
 
+  
+/* Mostrar menú cuando tenga la clase 'active' (que agregamos desde JS) */
 .nav-menu.active {
-    transform: translateY(0);
-    opacity: 1;
-    pointer-events: auto;
-    visibility: visible;
-}
-
-.nav-section {
-    margin-bottom: 30px;
-}
-
-.nav-section h3 {
-    color: white;
-    font-size: 1.2rem;
-    margin-bottom: 15px;
-    border-bottom: 2px solid rgba(255, 255, 255, 0.3);
-    padding-bottom: 5px;
-}
-
-.nav-section ul {
-    list-style: none;
-}
-
-.nav-section ul li {
-    margin-bottom: 10px;
-}
-
-.nav-section ul li a {
-    color: rgba(255, 255, 255, 1);
-    text-decoration: none;
-    font-size: 0.95rem;
-    transition: color 0.3s ease;
     display: block;
-    padding: 8px 0;
+    left: 0;
 }
 
-.nav-section ul li a:hover {
-    color: white;
-    transform: translateX(5px);
+/* Estilos base */
+.nav-menu ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    transition: all 0.3s ease;
 }
+
+.nav-menu li {
+position: relative;
+transition: all 0.3s ease;
+}
+
+.nav-menu a {
+text-decoration: none;
+display: block;
+padding: 10px 15px;
+color: #ffffff;
+
+}
+
+/* Submenús ocultos por defecto */
+.submenu {
+display: none;
+margin-left: 20px;
+padding-left: 40px;
+margin-top: 20px;
+transition: all 0.3s ease;
+}
+
+.submenu li{       
+    margin-left: 20px; 
+    color: rgb(209, 209, 209);
+    font-size: small;
+}
+
+.has-submenu.open > .submenu {
+display: block;
+border-bottom: 1px solid #416d4e;
+border-top: 1px solid #416d4e;
+
+}
+
+/* Estilo base de la flecha */
+.submenu-arrow {
+display: inline-block;
+transition: transform 0.3s ease;
+color: rgb(255, 255, 255);
+}
+
+.has-submenu.open > a .submenu-arrow {
+transform: rotate(90deg);
+}
+
+.acciones-evento {
+    display: flex;
+    gap: 8px; /* espacio deseado entre botones */
+    align-items: center;
+    text-decoration: none;
+}
+  
 
 /* Botones */
 .btn {
@@ -183,6 +258,13 @@ body {
     border: none;
     cursor: pointer;
     font-size: 1rem;
+}
+
+.btn-mercadopago{
+    background-color: #ffe600;
+    border: 1px solid rgb(209, 209, 209);
+    padding: 0px;
+    max-height: 50px;
 }
 
 .btn-primary {
@@ -215,6 +297,14 @@ body {
     font-size: 0.9rem;
 }
 
+.btn-outline.active {
+    background: #4a7c59;
+    color: #ffffff;
+    border: 2px solid #4a7c59;
+    padding: 8px 16px;
+    font-size: 0.9rem;
+}
+
 .btn-outline:hover {
     background: #4a7c59;
     color: white;
@@ -227,6 +317,80 @@ body {
 
 .btn-full {
     width: 100%;
+}
+
+.btn-registro-container{
+    align-items: center;
+    text-align: center;
+}
+
+.btn-registro {
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #211aaa;
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+    margin-left: auto;
+    text-decoration: none;
+    font-size: small;    
+}
+
+.btn-registro:hover {
+    background-color: #16117c;
+}
+
+.btn-editar {
+    color: white;
+    background-color: #28a745; /* Verde */
+    border: none;
+    padding: 6px 10px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+    transition: background-color 0.3s ease;
+}
+
+.btn-editar:hover {
+    background-color: #218838;
+}
+
+.btn-ver-reservas {
+    color: white;
+    background-color: #007bff; /* Azul */
+    border: none;
+    padding: 6px 10px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+    transition: background-color 0.3s ease;
+}
+
+.btn-ver-reservas:hover {
+    background-color: #0056b3;
+}
+
+.btn-eliminar {
+    color: white;
+    background-color: #dc3545; /* Rojo */
+    border: none;
+    padding: 6px 10px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+    transition: background-color 0.3s ease;
+}
+
+.btn-eliminar:hover {
+    background-color: #c82333;
+}
+
+.filtro-select {
+    display: none;
 }
 
 /* Sección Hero */
@@ -319,6 +483,35 @@ body {
     filter: drop-shadow(0 1px 2px rgba(0,0,0,0.08));
 }
 
+
+
+.login-container {
+    position: absolute;    
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);       
+    padding: 20px;
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 5px;
+    border: 2px solid rgb(208, 208, 208);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    max-width: 480px;
+}
+
+.login-form {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+.login-container-img{
+    display: flex;
+    justify-content: center;
+
+}
+.login-img{    
+    height: 4.2em;
+}
+
 /* Títulos de sección */
 .section-title {
     font-size: 2.5rem;
@@ -338,10 +531,24 @@ body {
     margin-right: auto;
 }
 
+.submit-btn {
+    padding: 12px;
+    border: none;
+    border-radius: 5px;
+    background-color: #4a6741;
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.submit-btn:hover {
+    background-color: #3a5233;
+}
+
 /* Sección Agenda */
 .agenda {
     padding: 100px 0;
-    background: white;
+    background: rgb(255, 255, 255);
 }
 
 .agenda-grid {
@@ -394,7 +601,7 @@ body {
 
 /* Sección Eventos */
 .events {
-    padding: 100px 0;
+    padding: 100px 5px;
     background: #f1eded;
 }
 
@@ -411,6 +618,7 @@ body {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     display: flex;
+    max-width: 480px;
 }
 
 .event-card:hover {
@@ -476,7 +684,7 @@ body {
 /* Sección Contacto */
 .contact {
     padding: 100px 0;
-    background: white;
+    background: #f1eded;
 }
 
 .contact-content {
@@ -527,6 +735,12 @@ body {
     border-radius: 15px;
 }
 
+#filtro-categoria{
+    border-radius: 6px;
+    border-color: #4a7c59;
+    border-width: 2px;
+}
+
 .form-group {
     margin-bottom: 20px;
 }
@@ -538,7 +752,7 @@ body {
     padding: 12px 15px;
     border: 2px solid #e9ecef;
     border-radius: 8px;
-    font-size: 1rem;
+    font-size: medium;
     transition: border-color 0.3s ease;
     font-family: inherit;
 }
@@ -598,10 +812,22 @@ body {
     color: #4a7c59;
 }
 
+.img-reserva-confirmada{
+    height: 4.2em;
+    align-items: center;
+
+}
+
 .logo-img {
     height: 2.2em; /* Ajusta este valor si es necesario para igualar el h1 */
     vertical-align: middle;
     margin-left: 0.5em;
+    overflow-y: hidden;
+}
+
+.logo-img-mercadopago{
+    height: 3.2em;
+    margin: 0px;
 }
 
 .social-links {
@@ -634,8 +860,123 @@ body {
     color: #bdc3c7;
 }
 
+.reserva-form {
+    background: #f8f9fa;
+    padding: 20px;
+    border-radius: 15px;
+    max-width: 600px;
+   
+    
+}
+
+.reserva-confirmada{
+    margin-top: 50px;
+    max-width: 600px;
+    background: #f8f9fa;
+    padding: 40px;
+    border-radius: 15px;
+    border-color: #4a7c59;
+    border-width: 5px;
+    border-style: solid;
+
+}
+
+.reserva-error{
+    margin-top: 50px;
+    max-width: 600px;
+    background: #f8f9fa;
+    padding: 40px;
+    border-radius: 15px;
+    border-color: #ce000a;
+    border-width: 5px;
+    border-style: solid;
+
+}
+
+.reserva-pendiente{
+    margin-top: 50px;
+    max-width: 600px;
+    background: #f8f9fa;
+    padding: 40px;
+    border-radius: 15px;
+    border-color: #fd8700;
+    border-width: 5px;
+    border-style: solid;
+
+}
+
+.reserva{
+    margin-top: 50px;
+    max-width: 500px;
+    background: #f8f9fa;
+    padding: 40px;
+    border-radius: 15px;
+    border-color: #4a7c59;
+    border-width: 2px;
+    border-style: solid;   
+
+}
+
+/* Estilo general */
+.user-icon {
+    display: none;
+    position: relative;
+    font-size: 1.8rem;
+    cursor: pointer;
+}
+
+.user-dropdown {
+    display: none;
+    position: absolute;
+    top: 100%;
+    right: 0;    
+    background: rgba(255, 255, 255, 0.8);
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    padding: 10px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+    z-index: 1000;
+    min-width: 150px;box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: left 0.3s ease-in-out;
+
+    
+}
+
+.user-dropdown a,
+.user-dropdown button {
+    display: block;
+    width: 100%;
+    text-align: left;
+    background: none;
+    border: none;
+    padding: 0px 0;
+    color: #333;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.user-dropdown button:hover,
+.user-dropdown a:hover {
+    background-color: #f0f0f0;
+}
+
 /* Responsive */
 @media (max-width: 768px) {
+
+    .filtro-botones {
+        display: none;
+    }
+    .filtro-select {
+        display: block;
+        margin-top: 10px;
+    }
+
+    .filtro-select select {
+        width: 100%;
+        padding: 8px;
+        font-size: 1rem;
+    }
+
     .header-container {
         justify-content: space-between;
     }
@@ -644,6 +985,13 @@ body {
         font-size: 1.8rem;
         text-align: right;
     }
+
+    .login-container {
+        position: absolute;
+        top:370px;
+         
+    } 
+    
     
     .hamburger {
         padding: 8px;
@@ -716,6 +1064,17 @@ body {
         top: 0%;
         transform: translate(-50%, -50%);
     }
+
+    #user-info,
+    #login-link {
+        display: none !important;
+    }
+
+    .user-icon {
+        display: block !important;
+    }
+
+    
 }
 
 @media (max-width: 480px) {
@@ -751,6 +1110,7 @@ body {
     .contact-form {
         padding: 25px;
     }
+    
 } 
 
 #readMoreBtn {
@@ -760,6 +1120,39 @@ body {
     border: none !important;
     margin-top: 10px !important;
     font-size: 1rem !important;
-    z-index: 9999 !important;
+    /*z-index: 9999 !important;*/
     position: relative !important;
+} 
+
+/* --- Login container responsive --- */
+.login-container {
+    width: 100%;
+    max-width: 350px;
+    margin: 40px auto;
+    padding: 24px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    background: #fff;
+    border-radius: 8px;
+}
+
+.login-container-img {
+    text-align: center;
+}
+
+.login-img {
+    max-width: 200px;
+    width: 100%;
+    height: auto;
+}
+
+@media (max-width: 480px) {
+    .login-container {
+        max-width: 95vw;
+        padding: 12px;
+        margin: 12px auto;
+    }
+    .login-img {
+        max-width: 80vw;
+        height: auto;
+    }
 } 
