landing page refactored

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -16,24 +16,26 @@
     <section id="presentacion" class="hero">
         <div class="hero-container">
             <div class="hero-content">
-                <h1 class="hero-title">Bienvenida!</h1>
-                <p class="hero-subtitle">
-                    Mi nombre es Danae. En este espacio busco acercar a vos todas las herramientas que he transitado y adquirido en muchos años. Herramientas que me han acercado a mí, que me han sanado en mente, cuerpo y alma.
-                    <span id="dots">...</span>
-                    <span id="more" style="display:none;">  
-                        <br>  
-                        <br>                    
-                        Es mucho el camino recorrido y muchas veces no ha sido fácil. Lo importante es no dejar de intentarlo, disfrutar del proceso y ser amorosos con nosotros mismos. En este sitio vas a encontrar una diversidad de cursos y terapias de diferentes temas que, en un comienzo, te puede parecer que no tiene nada que ver, pero en la medida que te vayas acercando, te comparto como llegue hasta acá, como puedo unir todas estas temáticas y por momentos es sencillo responderlo: la sanación es contemplándonos como parte del todo tomando cada vez más contacto con nuestro interior y exterior, y dejar de mirar todo por separado.
-                        Espero que encuentres el camino que estás buscando y poder acompañarte en él.
-                        Gracias por estar acá.
-                        Con mucho cariño.
-                        Danae
-                    </span>
-                </p>
-                <div class="hero-firma">
+                <img class="santolina-img" src="/static/img/foto_santolina.png" alt="Santolina">
+                <div class="hero-content-text">
+                    <h1 class="hero-title">Bienvenida!</h1>
+                    <p class="hero-subtitle">
+                        Mi nombre es Danae. En este espacio busco acercar a vos todas las herramientas que he transitado y adquirido en muchos años. Herramientas que me han acercado a mí, que me han sanado en mente, cuerpo y alma.
+                        <span id="dots">...</span>
+                        <span id="more" style="display:none;">  
+                            <br>  
+                            <br>                    
+                            Es mucho el camino recorrido y muchas veces no ha sido fácil. Lo importante es no dejar de intentarlo, disfrutar del proceso y ser amorosos con nosotros mismos. En este sitio vas a encontrar una diversidad de cursos y terapias de diferentes temas que, en un comienzo, te puede parecer que no tiene nada que ver, pero en la medida que te vayas acercando, te comparto como llegue hasta acá, como puedo unir todas estas temáticas y por momentos es sencillo responderlo: la sanación es contemplándonos como parte del todo tomando cada vez más contacto con nuestro interior y exterior, y dejar de mirar todo por separado.
+                            Espero que encuentres el camino que estás buscando y poder acompañarte en él.
+                            Gracias por estar acá.
+                            Con mucho cariño.
+                            Danae
+                        </span>
+                    </p>
+                    <div class="hero-firma">
+                        <img src="/static/img/logo.png" alt="Firma Santolina" class="firma-logo">
+                    </div>
                     <a href="#" id="readMoreBtn" class="btn btn-secondary" style="font-size:0.9rem;">Leer más...</a>
-                    
-                    <img src="/static/img/logo.png" alt="Firma Santolina" class="firma-logo">
                 </div>
             </div>
             <!--<div class="hero-image">
