--- a/frontend/static/styles.css
+++ b/frontend/static/styles.css
@@ -54,6 +54,7 @@ body {
     position: relative;
     height: 40px; 
     overflow: visible; 
+    background-color: rgba(215, 208, 208, 0.5);
 }
 
 .logo-hamburger {
@@ -395,19 +396,13 @@ transform: rotate(90deg);
 
 /* Sección Hero */
 .hero {
-    min-height: 100vh;
+    
     display: flex;
-    align-items: center;
-    background:
-        linear-gradient(60deg, 
-        rgba(255, 255, 255, 0.9) 0%,
-        rgba(255, 255, 255, 0.0) 60%,        
-        rgba(255, 179, 0, 0.2) 95%),
-        url('img/banner.jpg') no-repeat center center;
+    align-items: center;    
     background-size: cover;
-    background-color: #4a7c59;
-    padding-top: 60px;
-    padding-bottom: 20px;
+    background: #ffffff;    
+    padding-top: 100px;
+    padding-bottom: 50px;
 }
 
 .hero-container {
@@ -415,30 +410,34 @@ transform: rotate(90deg);
     margin: 0 auto;
     padding: 0 20px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 60px;
     align-items: center;
+    
 }
 
 .hero-content {
-    max-width: 500px;
+    display: flex;
+    align-items: center;
+    margin: auto;
+    max-width: 800px;
     background-color: #4a7c59;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+    background: #f5e1e8;
+    background: linear-gradient(70deg,rgba(245, 225, 232, 0.7) 0%, rgba(169, 176, 170, 0.3) 50%, rgba(217, 197, 137, 0.5) 100%);
 }
 
 .hero-title {
     font-size: 1.8rem;
     font-weight: 700;
-    color: #ffffff;
+    color: #4b4848;
     margin-bottom: 20px;
     line-height: 1.2;
 }
 
 .hero-subtitle {
     font-size: 1.0rem;
-    color: #dddddd;
+    color: #4f4b4b;
     margin-bottom: 30px;
     line-height: 1.6;
 }
@@ -512,6 +511,15 @@ transform: rotate(90deg);
     height: 4.2em;
 }
 
+.santolina-img{
+    height: 200px;
+    margin: 20px;
+    border: 5px solid rgb(216, 216, 216);
+    border-radius: 50%;
+    box-shadow: 0px 5px 10px rgba(0,0,0,0.5);
+
+}
+
 /* Títulos de sección */
 .section-title {
     font-size: 2.5rem;
@@ -547,8 +555,8 @@ transform: rotate(90deg);
 
 /* Sección Agenda */
 .agenda {
-    padding: 100px 0;
-    background: rgb(255, 255, 255);
+    padding: 50px 0;
+    background: rgb(253, 253, 253);
 }
 
 .agenda-grid {
@@ -1011,6 +1019,14 @@ transform: rotate(90deg);
     .hero-title {
         font-size: 2.5rem;
     }
+    .hero-subtitle {
+        text-align: left;
+    }
+
+    .hero-content {
+        display: block;
+        
+    }
     
     .hero-placeholder {
         width: 200px;
@@ -1115,13 +1131,14 @@ transform: rotate(90deg);
 
 #readMoreBtn {
     display: inline-block !important;
-    color: #fff !important;
-    background: #d85c2f !important;
+    color: #ffffff !important;
+    background:#4a7c59 !important;
     border: none !important;
     margin-top: 10px !important;
-    font-size: 1rem !important;
+    font-size: 0.8rem !important;
     /*z-index: 9999 !important;*/
     position: relative !important;
+    box-shadow: 3px 3px 10px #000000,
 } 
 
 /* --- Login container responsive --- */
