--- a/frontend/templates/forgot_password.html
+++ b/frontend/templates/forgot_password.html
@@ -16,36 +16,18 @@
             <img class="login-img" src="/static/img/logo.png" alt="Santolina">
         </div>        
         <br>        
-        <h2>Iniciar sesión</h2>
+        <h2>Reseteo de contraseña</h2>
         <br> 
-        <form id="login-form" class="login-form" action="/auth/jwt/login" method="post">
+        <form action="/forgot-password" method="post" class="login-form">
             
             <div class="form-group">
-                <label for="username">Correo electrónico:</label>
-                <input type="email" id="username" name="username" required>
-                
-            </div>
-            
-            <div class="form-group">
-                <label for="password">Contraseña:</label>
-                <input type="password" id="password" name="password" required>
+                <label for="email">Correo electrónico:</label>
+                <input type="email" id="email" name="email" required>
                 
             </div>
 
-            <button class="submit-btn" type="submit">Ingresar</button>
-        </form>
-        <br>
-
-        <a href="/forgot-password"">Olvidé mi contraseña</a>
-        <br>
-
-        <br>        
-        ¿No tienes usuario?
-        <br>
-        <div class="btn-registro-container">
-            
-            <a class="btn-registro" href="/registro">Registrarse</a>
-        </div>
+            <button type="submit" class="submit-btn">Enviar enlace de reseteo</button>
+        </form>        
 
     </div>
     <script>
@@ -72,3 +54,5 @@
         <script src="/static/script.js"></script>
 </body>
 </html>
+
+
