--- a/frontend/templates/partials/header.html
+++ b/frontend/templates/partials/header.html
@@ -16,24 +16,24 @@
             </div>
             <div class="nav-menu" id="nav-menu">
                 <ul class="main-menu">
-                    <li class="has-submenu">
+                    <li class="has-submenu oculto">
                         <a href="#">
                             Alimentación <span class="submenu-arrow"> > </span>
                         </a>
                         <ul class="submenu">
-                            <li><a href="#ebook">E-book</a></li>
+                            <li class="oculto"><a href="#ebook">E-book</a></li>
                             <li><a href="#asesoramiento">Asesoramiento individualizado</a></li>
-                            <li><a href="#recetas">Recetas</a></li>
+                            <li class="oculto"><a href="#recetas">Recetas</a></li>
                         </ul>
                     </li>
                     <li class="has-submenu">
                         <a href="#">Yoga <span class="submenu-arrow"> > </span></a>
                         <ul class="submenu">
-                            <li><a href="#hatha-yoga">Clases Hatha Yoga</a></li>
-                            <li><a href="#yoga-gong">Yoga y Gong</a></li>
+                            <li><a href="/yoga">Clases Hatha Yoga</a></li>
+                            <li><a href="/yoga-gong">Yoga y Gong</a></li>
                         </ul>
                     </li>
-                    <li class="has-submenu">
+                    <li class="has-submenu oculto">
                         <a href="#">Terapias <span class="submenu-arrow"> > </span></a>
                         <ul class="submenu">
                             <li><a href="#reiki">Reiki</a></li>
@@ -49,8 +49,11 @@
                             </li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="oculto">
                         <a href="#tienda-online">Tienda online</a>
+                    </li>
+                    <li>
+                        <a href="/eventos-disponibles">Próximos eventos</a>
                     </li>
                 </ul>
             </div>
