--- a/frontend/templates/alimentacion.html
+++ b/frontend/templates/alimentacion.html
@@ -25,7 +25,7 @@
 
     <section id="clases-yoga" class="container-clases-yoga">
         <div class="container">
-            <h2 class="section-title">Asesoramiento Nutricional y Transiciones Alimentarias</h2>
+            <h2 class="section-title">Asesoramiento Nutricional</h2>
             <p class="section-subtitle">Mi propuesta de asesoramiento nutricional es cercana, 
                 realista y personalizada. Te acompaño en el camino hacia una alimentación más consciente, 
                 saludable y alineada con tu estilo de vida. Ya sea que quieras mejorar tus hábitos, 
@@ -59,8 +59,14 @@
                 <div class="agenda-card text-left">
                     
                     <h3>Modalidades disponibles:</h3>
-                    <p><strong>Acompañamiento de 1 Mes</strong></p>
-                    <p>Incluye 2 encuentros + seguimiento por WhatsApp/email. 
+                    <p><strong>Acompañamiento de 1 mes</strong></p>
+                    <p>Incluye 3 encuentros + Recomendaciones + Plan de Alimentación 
+                        con lista de compras + extras. 
+                        Ideal para implementar cambios reales con apoyo.</p>
+                        <br>
+                    <p><strong>Acompañamiento con encuentro de elaboración de alimentos</strong></p>
+                    <p>Incluye 3 encuentros + Recomendaciones + Plan de Alimentación 
+                        con lista de compras + extras. 
                         Ideal para implementar cambios reales con apoyo.</p>
                         <br>
                     <p><strong>Programa Transición Vegetariana/Vegana (1 o 2 meses)</strong></p>
@@ -80,12 +86,16 @@
             <div class="hero-content">
                 
                 <div class="hero-content-text">
-                    <h1 class="hero-title">Mi enfoque</h1>
+                    <h2>Preguntas frecuentes (FAQ):</h1>
                     <p class="hero-subtitle">
-                        Creo en una nutrición que <strong>sostiene</strong> y <strong>acompaña</strong>, no que restringe. 
-                        Creo en el poder de la alimentación para mejorar no solo tu cuerpo, 
-                        sino también tu energía, tu humor, tu mente. Mi rol no es juzgarte, 
-                        sino guiarte de forma amorosa hacia hábitos más conscientes y sostenibles.
+                        <strong>¿Tengo que ser vegana/o para acceder al asesoramiento?</strong><br>
+                        No, acompaño cualquier tipo de alimentación que quiera mejorar desde un enfoque 
+                        más natural, equilibrado y respetuoso con el cuerpo.<br>
+                        <strong>¿Necesito cocinar o saber mucho de cocina?</strong><br>
+                        ¡No! Te doy herramientas simples y realistas que se adaptan a tu nivel.<br>
+                        <strong>¿Trabajás con patologías?</strong><br>
+                        Este es un espacio de bienestar general. Si tenés alguna condición específica, 
+                        trabajo en conjunto con tu médica/o o nutricionista clínico si fuera necesario.<br>
                         
                     </p>
                     
@@ -100,7 +110,7 @@
     <section id="contacto" class="contact">
         <div class="container">
             <h2 class="section-title">Contacto</h2>
-            <p class="section-subtitle">Contáctanos para solicitar más información y agendar tus clases</p>
+            <p class="section-subtitle">Contáctanos para solicitar más información y coordinar un asesoramiento</p>
             
             <div class="contact-content">
                 <div class="contact-info">
@@ -115,9 +125,11 @@
                     </div>
                     
                     <div class="contact-item">
-                        <div class="contact-icon">
-                            <i class="fab fa-whatsapp"></i>
-                        </div>
+                        <a href="https://wa.me/59899971075" target="_blank">
+                            <div class="contact-icon">
+                                <i class="fab fa-whatsapp"></i>
+                            </div>
+                        </a>
                         <div class="contact-details">
                             <h3>Teléfono</h3>
                             <p>+598 99 971 075</p>
@@ -141,7 +153,7 @@
                     </div>
                     <div class="form-group">
                         <select name="servicio" required>                            
-                            <option value="yoga">Clases de Yoga</option>                            
+                            <option value="alimentacion">Alimentación</option>                            
                         </select>
                     </div>
                     <div class="form-group">
