--- a/frontend/templates/partials/footer.html
+++ b/frontend/templates/partials/footer.html
@@ -9,11 +9,11 @@
             <div class="footer-section">
                 <h4>Servicios</h4>
                 <ul>
-                    <li class="oculto"><a href="#plan-alimentacion">Plan de alimentación</a></li>
+                    <li ><a href="/alimentacion">Alimentación</a></li>
                     <li><a href="/yoga">Yoga</a></li>
                     <li><a href="/yoga-gong">Yoga y Gong</a></li>
-                    <li class="oculto"><a href="#reiki">Reiki</a></li>
-                    <li class="oculto"><a href="#terapia-floral">Terapia Floral</a></li>
+                    <li><a href="/reiki">Reiki</a></li>
+                    <li><a href="/terapia-floral">Terapia Floral</a></li>
                     <li><a href="/eventos-disponibles">Próximos eventos</a></li>
                 </ul>
             </div>
