--- a/frontend/templates/partials/header.html
+++ b/frontend/templates/partials/header.html
@@ -16,13 +16,13 @@
             </div>
             <div class="nav-menu" id="nav-menu">
                 <ul class="main-menu">
-                    <li class="has-submenu oculto">
+                    <li class="has-submenu">
                         <a href="#">
                             Alimentación <span class="submenu-arrow"> > </span>
                         </a>
                         <ul class="submenu">
                             <li class="oculto"><a href="#ebook">E-book</a></li>
-                            <li><a href="#asesoramiento">Asesoramiento individualizado</a></li>
+                            <li><a href="/alimentacion">Asesoramiento individualizado</a></li>
                             <li class="oculto"><a href="#recetas">Recetas</a></li>
                         </ul>
                     </li>
@@ -33,14 +33,14 @@
                             <li><a href="/yoga-gong">Yoga y Gong</a></li>
                         </ul>
                     </li>
-                    <li class="has-submenu oculto">
+                    <li class="has-submenu">
                         <a href="#">Terapias <span class="submenu-arrow"> > </span></a>
                         <ul class="submenu">
-                            <li><a href="#reiki">Reiki</a></li>
-                            <li><a href="#pendulo">Péndulo hebreo</a></li>
-                            <li><a href="#terapia-floral">Terapia floral</a></li>
-                            <li><a href="#constelaciones">Constelaciones</a></li>
-                            <li class="has-submenu">
+                            <li><a href="/reiki">Reiki</a></li>
+                            <li><a href="/pendulo-hebreo">Péndulo hebreo</a></li>
+                            <li><a href="/terapia-floral">Terapia floral</a></li>
+                            <li><a href="/constelaciones">Constelaciones</a></li>
+                            <li class="has-submenu oculto">
                                 <a href="#">Talleres <span class="submenu-arrow"> > </span></a>
                                 <ul class="submenu">
                                     <li><a href="#ritual-utero">Ritual del útero</a></li>
